--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -273,3 +273,82 @@ img{
 .button_light:hover{
     background-color: var(--first-color-lighten);
 }
+
+/* about section */
+.about_container{
+    row-gap: 2rem;
+}
+ .about_data{
+     text-align: center;
+ }
+
+ .about_description{
+     margin-bottom: var(--mb-4);
+ }
+
+ .about_img{
+     width: 150px;
+     border-radius: 5rem;
+     margin: 0 auto;
+ }
+ /* works section */
+ .works_container{
+     row-gap: 2rem;
+ }
+
+ .works_data{
+     text-align: center;
+ }
+
+ .works_img{
+     margin-bottom: var(--mb-1);
+ }
+ .github-button{
+     width: 100%;
+ }
+
+ .contact_container{
+     row-gap: 2rem;
+ }
+
+ .contact_input{
+     width: 100%;
+     padding: 1rem;
+     outline: none;
+     border: none;
+     background-color: var(--first-color-light);
+     font-size: var(--normal-font-size);
+     margin-bottom: var(--mb-2);
+     border-radius: .5rem;
+ }
+
+ .contact ::placeholder{
+     color: var(--first-color-dark);
+     font-family: var(--body-font);
+     font-weight: var(--font-medium);
+ }
+
+ .contact_button{
+     outline: none;
+     border: none;
+     font-family: var(--body-font);
+     font-size: var(--normal-font-size);
+     cursor: pointer;
+ }
+
+ .contact_info{
+     margin-bottom: var(--mb-3);
+ }
+ 
+ .contact_subtitle{
+     font-size: var(--h3-font-size);
+     color: var(--first-color-dark);
+     margin-bottom: var(--mb-1);
+ }
+
+ .contact_text{
+     display: block;
+     padding-left: 1rem;
+ }
+
+ 
