--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -302,6 +302,9 @@ img{
 
  .works_img{
      margin-bottom: var(--mb-1);
+     border-radius: 50%;
+     padding-left: 10rem;
+     overflow: hidden;
  }
  .github-button{
      width: 100%;
@@ -351,4 +354,116 @@ img{
      padding-left: 1rem;
  }
 
- 
+ /* footer section */
+ .footer{
+     background-color: var(--first-color-darken);
+     color: var(--first-color-lighten);
+     text-align: center;
+ }
+
+ .footer_title{
+     font-size: var(--h1-font-size);
+     margin-bottom: var(--mb-2);
+ }
+
+ .footer_description{
+    margin-bottom: mb2;
+ }
+
+ .footer_socials{
+     margin-bottom: 3rem;
+ }
+
+ .footer_link{
+     display: inline-flex;
+     background-color: var(--first-color);
+     color: var(--first-color-lighten);
+     font-size: 1.1rem;
+     border-radius: 50%;
+     padding: .40rem;
+     margin: 0 var(--mb-1);
+    transition: .3s;
+ }
+
+ .footer_link:hover{
+     background-color: var(--first-color-lighten);
+     color: var(--first-color);
+ }
+
+ @media screen and (min-width: 768px) {
+     .home_button{
+         width: initial;
+     }
+
+     .nav_menu{
+         width: var(--nav-width);
+     }
+
+    .about_data{
+        text-align: initial;
+    }
+
+    .about_description{
+        margin-bottom: var(--mb-5);
+    }
+
+    .about_img{
+        width: 260px;
+    }
+
+    .contact_input{
+        column-gap: 1.5rem;
+    }
+
+    .footer{
+        background: none;
+    }
+
+    .footer_container{
+        background-color: var(--first-color-darken);
+        padding: 3rem 0;
+        border-radius: .5rem;
+    }
+ }
+
+ @media screen and (min-width: 1024px) {
+     body{
+         margin: 0;
+         padding-left: var(--nav-width);
+     }
+
+     .l-header{
+         width: 0;
+     }
+
+     .nav_toggle{
+         width: 0;
+     }
+
+     .nav_toggle, .nav_logo, .nav_close{
+         display: none;
+     }
+
+     .nav_menu{
+         left: 0;
+     }
+
+     .home_container{
+         height: 100vh;
+     }
+
+     .section{
+         padding: 3rem 0 2rem;
+     }
+
+     .bd-grid{
+         margin-left: auto;
+         margin-right: auto;
+     }
+ }
+
+ @media screen and (min-width: 1440px) {
+     .contact_info{
+         grid-template-columns: repeat(2,1fr);
+     }
+ }
