--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,12 +26,12 @@
     /* z index */
     --z-fixed: 100;
     /* colors */
-    --first-color: rgb(122, 52, 227);
+    --first-color: rgb(101, 36, 200);
     --first-color-dark: rgb(67, 15, 145);
     --first-color-darken: rgba(18, 4, 34, 0.663);
     --text-color: rgb(39, 28, 28);
-    --first-color-light: rgb(144, 139, 144);
-    --first-color-lighten: rgb(236, 236, 236);
+    --first-color-light: rgb(118, 112, 118);
+    --first-color-lighten: rgb(234, 222, 222);
 }
 
 @media screen and (min-width: 768px){
@@ -206,14 +206,14 @@ img{
 }
 
 .home_img{
-    /* padding-top: 1.3rem;
-    padding-left:  .8rem; */
     width: 160px;
     height: 160px;
     background-color: var(--first-color);
     border-radius: 50%;
     overflow: hidden;
-    margin-bottom: var(--mb-2)
+    margin-bottom: var(--mb-2);
+    opacity: .8;
+    
 }
 
 .home_title{
@@ -302,9 +302,9 @@ img{
 
  .works_img{
      margin-bottom: var(--mb-1);
-     border-radius: 50%;
+     /* border-radius: 50%; */
      padding-left: 10rem;
-     overflow: hidden;
+     /* overflow: hidden; */
  }
  .github-button{
      width: 100%;
