--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -303,7 +303,7 @@ img{
  .works_img{
      margin-bottom: var(--mb-1);
      /* border-radius: 50%; */
-     padding-left: 10rem;
+     padding-left: .3rem;
      /* overflow: hidden; */
  }
  .github-button{
@@ -473,6 +473,10 @@ img{
  @media screen and (min-width: 1440px) {
      .contact_info{
          grid-template-columns: repeat(2,1fr);
+     }
+
+     .works_img{
+         padding-left: 10rem;
      }
  }
 
