--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -211,9 +211,11 @@ img{
     background-color: var(--first-color);
     border-radius: 50%;
     overflow: hidden;
-    margin-bottom: var(--mb-2);
-    opacity: .8;
-    
+    margin-bottom: var(--mb-2);    
+}
+
+.home_img img{
+    opacity: .7;
 }
 
 .home_title{
@@ -526,3 +528,33 @@ img{
     border-radius: 10px;
     border: 3px groove #000000;
   }
+
+  /* keyframes */
+.home_img{
+    background: linear-gradient(270deg, #5b0995, #368d9a);
+    background-size: 400% 400%;
+    -webkit-animation: AnimationName 20s ease infinite;
+    -moz-animation: AnimationName 20s ease infinite;
+    -o-animation: AnimationName 20s ease infinite;
+    animation: AnimationName 20s ease infinite;
+}
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-o-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
